# English

./: .gitignore  README.md  alembic.ini
backend/: .coverage  README.md  alembic.ini  pyproject.toml  pytest.ini  run_tests.py
backend/alembic/: env.py
backend/alembic/versions/: 2d5e4de0ec4f_create_sessions_and_conversations_tables.py  9506d8a9ca8e_add_name_column_to_sessions_table.py  d41a1d8dbaec_baseline_from_models.py
backend/app/: main.py
backend/app/api/: sessions.py  transcription.py
backend/app/config/: database.py  settings.py
backend/app/models/: __init__.py  database_models.py  schemas.py
backend/app/prompts/: audio_prompts.py  base.py
backend/app/prompts/templates/: audio.txt  audio2.txt  audio_analysis.txt  audio_immediate.txt  transcript_analysis.txt
backend/app/services/: database_service.py  gemini.py  gemini_audio_service.py  gemini_service.py  hybrid_session_manager.py  postgres_session_manager.py  readme.md  session_manager.py  speech_service.py  text2speech_service.py  web_scraper_service.py
backend/tests/: conftest.py
backend/tests/api/: test_transcription.py
backend/tests/config/: test_settings.py
backend/tests/unit/: test_gemini_audio_service.py  test_gemini_service.py  test_speech_service.py  test_text2speech_service.py
frontend/: API_SETUP.md  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/lib/hooks/: useKeyboardControls.ts
frontend/src/lib/services/: api.ts  audioRecorder.ts
