[project]
name = "english-learning-backend"
version = "0.1.0"
description = "Backend for English learning application with speech recognition and text-to-speech capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "python-multipart>=0.0.20",
    "google-cloud-speech>=2.33.0",
    "google-cloud-texttospeech>=2.27.0",
    "google-genai>=1.20.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
    "websockets>=15.0.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.0",
    "coverage>=7.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.0",
    "coverage>=7.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.hatch.build.targets.wheel]
packages = ["app"] 
